# pip-purger

./: README.md  pyproject.toml
src/: pip-purge.py
